// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HOC disabledTooltip disabled false and button events (click, mouseover) 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <button
      disabled={false}
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      A Button with events
    </button>
  </div>
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled html button 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <button
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      A disabled Button
    </button>
    <div
      className="hit"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  text before
  <div
    className="c0"
  >
    <div
      className="hitWrapper"
    >
      <input
        disabled={true}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        type="text"
      />
      <div
        className="hit"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
    </div>
  </div>
  text after
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input with custom Tooltip text 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <input
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      type="checkbox"
    />
    <div
      className="hit"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input with tooltip right aligned 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <input
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      type="text"
    />
    <div
      className="hit"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots HOC disabledTooltip enhanced element with display block 1`] = `
.c0 {
  display: block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  text before
  <div
    className="c0"
  >
    <div
      className="hitWrapper"
    >
      <input
        disabled={true}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        type="text"
      />
      <div
        className="hit"
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      />
    </div>
  </div>
  text after
</div>
`;

exports[`Storyshots HOC disabledTooltip no tooltip 1`] = `
.c0 {
  display: inline-block;
}

.c0 .hitWrapper {
  position: relative;
}

.c0 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="hitWrapper"
  >
    <button
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      A disabled Button
    </button>
    <div
      className="hit"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
  </div>
</div>
`;
